--- a/index.html
+++ b/index.html
@@ -36,15 +36,13 @@
     <header id="home" class="hero">
         <div class="hero-background"></div>
         <div class="hero-overlay"></div>
-        <canvas id="particles"
-            style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; z-index: 1; pointer-events: none;"></canvas>
         <div class="hero-shapes">
             <div class="shape shape1"></div>
             <div class="shape shape2"></div>
             <div class="shape shape3"></div>
         </div>
         <div class="container">
-            <div class="hero-content reveal">
+            <div class="hero-content">
                 <div class="hero-badge">
                     <i class="fas fa-graduation-cap"></i>
                     <span>#1 Online Learning Platform</span>
@@ -104,7 +102,7 @@
     </header>
 
     <!-- Features Section -->
-    <section id="features" class="features reveal">
+    <section id="features" class="features">
         <div class="container">
             <div class="section-header">
                 <h2>Why Choose LearnUp?</h2>
@@ -137,7 +135,7 @@
     </section>
 
     <!-- Courses Section -->
-    <section id="courses" class="courses reveal">
+    <section id="courses" class="courses">
         <div class="container">
             <div class="section-header">
                 <h2>Popular Courses</h2>
@@ -211,7 +209,7 @@
     </section>
 
     <!-- Instructors Section -->
-    <section id="instructors" class="instructors reveal" style="padding: 80px 0; background-color: var(--light-bg);">
+    <section id="instructors" class="instructors" style="padding: 80px 0; background-color: var(--light-bg);">
         <div class="container">
             <div class="section-header">
                 <h2>Meet Our Experts</h2>
