--- a/instructors.html
+++ b/instructors.html
@@ -33,7 +33,7 @@
     </nav>
 
     <!-- Page Header -->
-    <section class="page-header reveal"
+    <section class="page-header"
         style="padding: 120px 0 60px; background-color: var(--dark-bg); color: white; text-align: center;">
         <div class="container">
             <div class="breadcrumb" style="margin-bottom: 20px; color: var(--text-muted);">
@@ -48,7 +48,7 @@
     </section>
 
     <!-- Instructors Grid -->
-    <section class="instructors-section reveal" style="padding: 80px 0;">
+    <section class="instructors-section" style="padding: 80px 0;">
         <div class="container">
             <div class="team-grid"
                 style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 30px;">
