--- a/index.html
+++ b/index.html
@@ -303,6 +303,11 @@
         </div>
     </footer>
 
+
+    <!-- Three.js CDN -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <script src="background-3d.js"></script>
+    <script src="tilt-effect.js"></script>
     <script src="script.js"></script>
 </body>
 
